# soft-renderer

./: .gitignore  CMakeLists.txt  Readme.md
.github/workflows/: ci.yml
config/: CMakeLists.txt  config.hpp
src/: Camera.cpp  Camera.h  DirectLight.h  Light.h  Model.cpp  Model.h  OBJ_Loader.h  Pbr.h  Pipeline.cpp  Pipeline.h  SDL_window.h  Scene.h  ShaderPayload.h  ShaderStage.cpp  ShaderStage.h  Srmath.h  Texture.cpp  Texture.h  Triangle.h  Vertex.h  WindowClass.h  main.cpp  stb_image_resize.h
